rewiring/test_comprehensive_quick/cycle_0001/build.err
%Error: /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/flattened/enum_wrapper.sv:19:15: syntax error, unexpected '(', expecting '{'
   19 |   enum u_enum (
      |               ^
%Error: /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/flattened/logic_wrapper.sv:24:17: syntax error, unexpected '(', expecting ',' or ';'
   24 |   logic u_logic (
      |                 ^
%Error: /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/flattened/struct_wrapper.sv:20:10: syntax error, unexpected IDENTIFIER, expecting '{'
   20 |   struct u_struct (
      |          ^~~~~~~~
%Error: /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/flattened/union_wrapper.sv:19:9: syntax error, unexpected IDENTIFIER, expecting '{'
   19 |   union u_union (
      |         ^~~~~~~
%Error: /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/unflattened/enum.sv:5:8: syntax error, unexpected enum, expecting IDENTIFIER or IDENTIFIER-for-cell or IDENTIFIER-for-type or randomize
    5 | module enum (
      |        ^~~~
%Error: /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/unflattened/enum.sv:7:5: syntax error, unexpected output, expecting IDENTIFIER or do or final or randomize
    7 |     output wire [3:0] e_out_eq,   
      |     ^~~~~~
%Error: /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/unflattened/enum.sv:8:5: syntax error, unexpected output, expecting IDENTIFIER or do or final or randomize
    8 |     output wire       is_E2
      |     ^~~~~~
%Error: /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/unflattened/enum.sv:17:5: syntax error, unexpected assign
   17 |     assign is_E2   = (e_in == E2);
      |     ^~~~~~
%Error: /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/unflattened/logic.sv:7:8: syntax error, unexpected logic, expecting IDENTIFIER or IDENTIFIER-for-cell or IDENTIFIER-for-type or randomize
    7 | module logic (
      |        ^~~~~
%Error: /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/unflattened/logic.sv:9:5: syntax error, unexpected input, expecting IDENTIFIER or do or final or randomize
    9 |     input  wire [3:0]  y,
      |     ^~~~~
%Error: /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/unflattened/logic.sv:10:5: syntax error, unexpected output, expecting IDENTIFIER or do or final or randomize
   10 |     output wire        eq,       
      |     ^~~~~~
%Error: /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/unflattened/logic.sv:11:5: syntax error, unexpected output, expecting IDENTIFIER or do or final or randomize
   11 |     output wire        neq,      
      |     ^~~~~~
%Error: /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/unflattened/logic.sv:12:5: syntax error, unexpected output, expecting IDENTIFIER or do or final or randomize
   12 |     output wire        gt,       
      |     ^~~~~~
%Error: /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/unflattened/logic.sv:13:5: syntax error, unexpected output, expecting IDENTIFIER or do or final or randomize
   13 |     output wire        red_and,  
      |     ^~~~~~
%Error: /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/unflattened/logic.sv:14:5: syntax error, unexpected output, expecting IDENTIFIER or do or final or randomize
   14 |     output wire        red_or,   
      |     ^~~~~~
%Error: /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/unflattened/logic.sv:15:5: syntax error, unexpected output, expecting IDENTIFIER or do or final or randomize
   15 |     output wire        red_xor   
      |     ^~~~~~
%Error: /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/unflattened/struct.sv:7:8: syntax error, unexpected struct, expecting IDENTIFIER or IDENTIFIER-for-cell or IDENTIFIER-for-type or randomize
    7 | module struct (
      |        ^~~~~~
%Error: /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/unflattened/struct.sv:9:5: syntax error, unexpected input, expecting IDENTIFIER or do or final or randomize
    9 |     input  wire signed [3:0] b_in,
      |     ^~~~~
%Error: /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/unflattened/struct.sv:10:5: syntax error, unexpected output, expecting IDENTIFIER or do or final or randomize
   10 |     output wire [7:0]  a_out,
      |     ^~~~~~
%Error: /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/unflattened/struct.sv:11:5: syntax error, unexpected output, expecting IDENTIFIER or do or final or randomize
   11 |     output wire signed [3:0] b_out
      |     ^~~~~~
%Error: /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/unflattened/struct.sv:12:1: syntax error, unexpected ')', expecting ',' or ';'
   12 | );
      | ^
%Error: /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/unflattened/union.sv:7:8: syntax error, unexpected union, expecting IDENTIFIER or IDENTIFIER-for-cell or IDENTIFIER-for-type or randomize
    7 | module union (
      |        ^~~~~
%Error: /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/unflattened/union.sv:9:5: syntax error, unexpected output, expecting IDENTIFIER or do or final or randomize
    9 |     output wire [7:0]  u_low,
      |     ^~~~~~
%Error: /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/unflattened/union.sv:10:5: syntax error, unexpected output, expecting IDENTIFIER or do or final or randomize
   10 |     output wire [7:0]  u_high
      |     ^~~~~~
%Error: /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/unflattened/union.sv:11:1: syntax error, unexpected ')', expecting ',' or ';'
   11 | );
      | ^
%Error: Exiting due to 25 error(s)
